--- a/app/src/main/res/layout/fragment_view_photo.xml
+++ b/app/src/main/res/layout/fragment_view_photo.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     android:background="@color/black"
-    tools:context=".ViewPhoto">
+    tools:context=".ui.ViewPhoto">
 
     <ImageView
         android:id="@+id/back_btn"
@@ -32,65 +32,5 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/dia_cooking" />
 
-    <LinearLayout
-        android:id="@+id/info_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/author_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/arrow_back_ios"
-            android:drawablePadding="6dp"
-            android:text="@string/empty_text"
-            android:textColor="@color/white"
-            android:drawableTint="@color/white"
-            />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/location_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/arrow_back_ios"
-            android:drawablePadding="6dp"
-            android:text="@string/empty_text"
-            android:textColor="@color/white"
-            android:drawableTint="@color/white"
-            />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/likes_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/arrow_back_ios"
-            android:drawablePadding="6dp"
-            android:text="@string/empty_text"
-            android:textColor="@color/white"
-            android:drawableTint="@color/white"
-            />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/downloads_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/arrow_back_ios"
-            android:drawablePadding="6dp"
-            android:text="@string/empty_text"
-            android:textColor="@color/white"
-            android:drawableTint="@color/white"
-            />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
