--- a/app/src/main/res/layout/fragment_all_photos.xml
+++ b/app/src/main/res/layout/fragment_all_photos.xml
@@ -69,16 +69,16 @@
                 android:id="@+id/images_rv"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="6dp"
-                tools:listitem="@layout/photo_view_holder"
-                app:spanCount="2"
+                android:layout_marginTop="16dp"
                 android:orientation="vertical"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/search_plate" />
+                app:layout_constraintTop_toBottomOf="@+id/search_plate"
+                app:spanCount="2"
+                tools:listitem="@layout/photo_view_holder" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
